metadata/force-app/main/default/objects/CustomName_ZWdMp__c/CustomName_ZWdMp__c.object-meta.xml
<CustomObject>
    <description>Description_pHFhc</description>
    <label>CustomLabel_dnbJp</label>
    <nameField>
        <label>CustomLabel_dnbJp</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_dnbJps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>