metadata/force-app/main/default/objects/CustomName_ZWdMp__c/fields/CustomField_bEBYu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_bEBYu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldIHWHd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>